--- a/data_analisys.ipynb
+++ b/data_analisys.ipynb
@@ -16,7 +16,7 @@
     "import scipy.stats as stats\n",
     "import numpy as np\n",
     "\n",
-    "# CONSTANTS: THIS CONSTANTS DEFINE WHAT THE DATA TO BE ANALYZED, THEREFORE WHAT THE PROGRAM WILL DO\n",
+    "# CONSTANTS: THIS CONSTANTS DEFINE WHAT DATA TO BE ANALYZED, THEREFORE WHAT THE PROGRAM WILL DO\n",
     "interactive = False\n",
     "if interactive:\n",
     "    IRRADIATED_DOSIMETERS = True if str(input('As leituras são de dosímetros irradiados? (S/N): '))=='S' else False\n",
@@ -43,12 +43,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "class osl_response:\n",
     "    def __init__(self, file_path=None):\n",
     "        self.file = file_path\n",
     "        if file_path != None:\n",
     "            self.file = os.path.abspath(file_path)   # Verificar se funciona para caminhos com caracters espceiais\n",
+    "            self.dose = os.path.basename(os.path.abspath((os.path.join(os.path.dirname(self.file), '..'))))\n",
+    "            self.pastilha = os.path.basename(os.path.dirname(self.file))\n",
     "            self.df = pd.read_csv(self.file, header=None, sep=' ', names = ['Tempo (s)', 'Intensidade (u.a.)'])\n",
     "            self.df = self.df.drop(labels=0, axis=0)\n",
     "            self.df = self.df.apply(pd.to_numeric)\n",
@@ -94,25 +95,34 @@
     "        self.mean_integral = np.mean(self.integrals)\n",
     "        self.stdv = np.std(self.integrals)\n",
     "    \n",
-    "    def plot(self, reading_number='all', filter=True):\n",
-    "        fig, axis = plt.subplots()\n",
+    "    def plot(self, reading_number='all', filter=True, label=False):\n",
     "        rd = self.readings\n",
+    "        fig = plt.figure(figsize=(20,10))\n",
+    "        axis = fig.add_subplot(111)\n",
+    "        axis.set_title('Resposta OSL para {}'.format(rd[0].dose))\n",
+    "        axis.set_xlabel('Tempo (s)')\n",
+    "        axis.set_ylabel('Luminescência (u.a.)')\n",
+    "        axis.legend(loc='best')\n",
     "        if filter:\n",
     "            if reading_number == 'all':\n",
     "                for _ in rd:\n",
-    "                    axis.plot(_.savgol_filter(51,3)[0], _.savgol_filter(51,3)[1])\n",
+    "                    lab = 'Dose = {} - Integral={}'.format(_.pastilha, _.total_counts()) if label else ''\n",
+    "                    axis.plot(_.savgol_filter(51,3)[0], _.savgol_filter(51,3)[1], label = lab)\n",
     "                    axis.legend()\n",
     "            elif len(rd) >= reading_number:\n",
-    "                axis.plot(rd[reading_number].savgol_filter(51,3)[0], rd[reading_number].savgol_filter(51,3)[1])\n",
+    "                lab = 'Dose = {} - Integral={}'.format(rd[reading_number].total_counts(), rd[reading_number].total_counts()) if label else ''\n",
+    "                axis.plot(rd[reading_number].savgol_filter(51,3)[0], rd[reading_number].savgol_filter(51,3)[1], label=lab)\n",
     "                axis.legend()\n",
     "        else:\n",
     "            if reading_number == 'all':\n",
     "                for _ in rd:\n",
-    "                    axis.plot(_.df.loc[:,'Tempo (s)'], _.df.loc[:,'Intensidade (u.a.)'])\n",
+    "                    lab = 'Dose = {} - Integral={}'.format(_.pastilha, _.total_counts()) if label else ''\n",
+    "                    axis.plot(_.df.loc[:,'Tempo (s)'], _.df.loc[:,'Intensidade (u.a.)'], label = lab)\n",
     "                    axis.legend()\n",
     "            elif len(rd) >= reading_number:\n",
-    "                axis.plot(rd[reading_number].df.loc[:,'Tempo (s)'], rd[reading_number].df.loc[:,'Intensidade (u.a.)'])\n",
-    "                axis.legend()\n"
+    "                lab = 'Dose = {} - Integral={}'.format(rd[reading_number].pastiha, rd[reading_number].total_counts()) if label else ''\n",
+    "                axis.plot(rd[reading_number].df.loc[:,'Tempo (s)'], rd[reading_number].df.loc[:,'Intensidade (u.a.)'], label = lab)\n",
+    "                axis.legend()"
    ]
   },
   {
@@ -143,7 +153,11 @@
     "\n",
     "file_exsists = os.path.exists('resultados.txt')\n",
     "if not os.path.exists('resultados.txt'):\n",
-    "  file = open('resultados.txt', 'a')\n",
+    "  if interactive:\n",
+    "    file_name = str(input('Nome do arquivo com os resultados: '))\n",
+    "    file = open(file_name, 'a')\n",
+    "  else:\n",
+    "    file = open('resultados.txt', 'a')\n",
     "  file.write('Equação de Calibração:\\n\\t\\tContagem = Dose * {} + {}\\n'.format(slope, intercept))\n",
     "  file.write('Equação de Calibração:\\n\\t\\tDose = Contagem*{} - {}\\n'.format(1/slope, intercept*(1/slope)))\n",
     "  if LID: file.write('LID = {}\\n'.format(lid))\n",
@@ -151,7 +165,9 @@
     "  file.close()\n",
     "else:\n",
     "  print('O Arquivo já existe.')\n",
-    "  file.close()"
+    "\n",
+    "\n",
+    "print(data['0,1 Gy'].readings[0].dose)"
    ]
   },
   {
@@ -182,9 +198,12 @@
     "    else:\n",
     "        ax.errorbar(IRRADIATED_DOSES, mean_integrals, yerr=mean_integrals_std)\n",
     "\n",
-    "print()\n",
-    "set_fig()\n",
-    "plot_dr(False, 'teste.png')"
+    "def plot_osl_response():\n",
+    "    for _ in data:\n",
+    "        data[_].plot(filter=True,reading_number=0, label=True)\n",
+    "\n",
+    "data['0,1 Gy'].plot(filter=True,reading_number='all', label=True)\n",
+    "plt.savefig(\"teste.png\", bbox_inches='tight', dpi=100)"
    ]
   }
  ],
